--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<div class="card">
+    <div class="wrapper">
+        <img src="2020Chron_782x.webp" class="BackCard">
+    </div>
+    <img src="50174645_1656134595968.png" class="ActionShot">
+</div>
 </body>
 </html>
